[package]
name = "rproxy-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rproxy-agent"
path = "src/main.rs"

[dependencies]
rproxy-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
futures-util = { workspace = true }
yamux = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
